# rwkv_trainer

./: .gitignore  MEMORY.md  README.md  pyproject.toml  requirements.txt  run_tests.sh  test_comparison.py  test_comparison.sh  test_end_to_end.py  test_fair_comparison.sh  train.py
comparison_original/: training_log.txt
comparison_trainer/configs/: config.json
examples/: simple_training.py  vocab_example.txt
src/: __init__.py  train.py
src/data_utils/: __init__.py  binidx.py  converter.py  tokenizer.py
src/model/: __init__.py  model.py
src/trainer/: __init__.py  dataset.py  model_utils.py  pipeline.py  trainer_module.py
tests/: test_data_converter.py  test_data_converter_simple.py  test_integration.py  test_pipeline.py  test_pipeline_simple.py  test_runtime_fallbacks.py  test_strict_comparison.py  test_tokenizer.py  test_tokenizer_simple.py  test_x070_fallback.py
