[project]
name = "rwkv-trainer"
version = "0.1.5"
description = "A packaged RWKV training framework for sequence data"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Wu Tianyi", email = "wutianyi@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    # PyTorch with CUDA - install separately: 
    #   uv pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124
    "pytorch-lightning==1.9.5",  # RWKV-LM requires this specific version
    "lightning-fabric>=1.9.0,<2.0",
    "deepspeed>=0.9.0",
    "numpy>=1.20.0",
    "setuptools<82",  # Required for pkg_resources (lightning-fabric dependency)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
cuda = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
]

[project.scripts]
rwkv-train = "train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["train.py"]

[tool.hatch.build.targets.wheel.sources]
"src" = "rwkv_trainer"
"train.py" = "rwkv_trainer/train.py"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
